--- a/servers/gateway/Dockerfile
+++ b/servers/gateway/Dockerfile
@@ -1,4 +1,8 @@
-GOOS=linux go build
-docker build -t aryasaatvik/sb-gateway .
-go clean
-docker push aryasaatvik/sb-gateway
+# add the necessary instructions
+# to create a Docker container image
+# for your Go API gateway server
+FROM alpine
+RUN apk add --no-cache ca-certificates
+COPY gateway /gateway
+EXPOSE 443
+ENTRYPOINT ["/gateway"]
