--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,11 @@
 api_server.pem
 yuyu_key.pem
+clients/node_modules
+node_modules
 
 .DS_Store
 .vscode
 .idea
-clients/node_modules
+
+
+build_servers.sh
