--- a/clients/package.json
+++ b/clients/package.json
@@ -3,9 +3,12 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "bootstrap": "^4.6.0",
     "prop-types": "^15.6.2",
     "react": "^16.8.0-alpha.1",
+    "react-bootstrap": "^1.5.2",
     "react-dom": "^16.8.0-alpha.1",
+    "react-router-dom": "^5.2.0",
     "react-scripts": "2.1.3"
   },
   "scripts": {
